--- a/maven/ReleaseStageApproveAndPromote/Jenkinsfile
+++ b/maven/ReleaseStageApproveAndPromote/Jenkinsfile
@@ -30,7 +30,7 @@ def label = "buildpod.${env.JOB_NAME}.${env.BUILD_NUMBER}".replace('-', '_').rep
 def envStage = utils.environmentNamespace('stage')
 def envProd = utils.environmentNamespace('run')
 def stashName = ""
-
+def deploy = false
 mavenNode {
   checkout scm
   if (utils.isCI()){
@@ -38,7 +38,7 @@ mavenNode {
     mavenCI{}
     
   } else if (utils.isCD()){
-  
+    deploy = true
     echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
     container(name: 'maven') {
 
@@ -62,18 +62,20 @@ mavenNode {
     }
   }
 
-  node {
-      stage('Approve')
-      approve {
-        room = null
-        version = canaryVersion
-        console = fabric8Console
-        environment = 'Stage'
-      }
+  if (deploy){
+    node {
+        stage('Approve')
+        approve {
+          room = null
+          version = canaryVersion
+          console = fabric8Console
+          environment = 'Stage'
+        }
 
-      stage('Rollout to Run')
-      unstash stashName
-      kubernetesApply(environment: envProd)
+        stage('Rollout to Run')
+        unstash stashName
+        kubernetesApply(environment: envProd)
+    }
   }
 }
 
