--- a/golang/ReleaseStageApproveAndPromote/Jenkinsfile
+++ b/golang/ReleaseStageApproveAndPromote/Jenkinsfile
@@ -1,5 +1,5 @@
 #!/usr/bin/groovy
-@Library('github.com/fabric8io/fabric8-pipeline-library@master')
+@Library('github.com/fabric8io/fabric8-pipeline-library@v2.2.335')
 def utils = new io.fabric8.Utils()
 clientsNode{
   def envStage = utils.environmentNamespace('stage')
