--- a/maven/ReleaseAndStage/Jenkinsfile
+++ b/maven/ReleaseAndStage/Jenkinsfile
@@ -1,61 +1,35 @@
 #!/usr/bin/groovy
 @Library('github.com/fabric8io/fabric8-pipeline-library@master')
-
-def failIfNoTests = ""
-try {
-  failIfNoTests = ITEST_FAIL_IF_NO_TEST
-} catch (Throwable e) {
-  failIfNoTests = "false"
-}
-
-def localItestPattern = ""
-try {
-  localItestPattern = ITEST_PATTERN
-} catch (Throwable e) {
-  localItestPattern = "*IT"
-}
-
-
-def versionPrefix = ""
-try {
-  versionPrefix = VERSION_PREFIX
-} catch (Throwable e) {
-  versionPrefix = "1.0"
-}
-
-def canaryVersion = "${versionPrefix}.${env.BUILD_NUMBER}"
+def canaryVersion = "1.0.${env.BUILD_NUMBER}"
 def utils = new io.fabric8.Utils()
-def label = "buildpod.${env.JOB_NAME}.${env.BUILD_NUMBER}".replace('-', '_').replace('/', '_')
+def stashName = "buildpod.${env.JOB_NAME}.${env.BUILD_NUMBER}".replace('-', '_').replace('/', '_')
+def envStage = utils.environmentNamespace('stage')
+def envProd = utils.environmentNamespace('run')
 
 mavenNode {
   checkout scm
   if (utils.isCI()){
-    
-      mavenCI{}
+
+    mavenCI{}
     
   } else if (utils.isCD()){
-    
-    def envStage = utils.environmentNamespace('stage')
-
     echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
     container(name: 'maven') {
 
-      stage('Build Release')
-      mavenCanaryRelease {
-        version = canaryVersion
+      stage('Build Release'){
+        mavenCanaryRelease {
+          version = canaryVersion
+        }
+        //stash deployment manifests
+        stash includes: '**/*.yml', name: stashName
       }
 
-      stage('Integration Test')
-      mavenIntegrationTest {
-        environment = 'Test'
-        failIfNoTests = localFailIfNoTests
-        itestPattern = localItestPattern
+      stage('Rollout to Stage'){
+        unstash stashName
+        apply{
+          environment = envStage
+        }
       }
-
-      stage('Rollout to Stage')
-      kubernetesApply(environment: envStage)
-
     }
   }
 }
-
