--- a/maven/ReleaseAndStage/Jenkinsfile
+++ b/maven/ReleaseAndStage/Jenkinsfile
@@ -12,8 +12,14 @@ mavenNode {
   checkout scm
   if (utils.isCI()) {
 
-    mavenCI{}
-    
+    mavenCI {
+        integrationTestCmd = "mvn org.apache.maven.plugins:maven-failsafe-plugin:integration-test \
+                            -Dnamespace.use.current=false -Dnamespace.use.existing=${utils.testNamespace()} \
+                            -Dit.test=*IT -DfailIfNoTests=false -DenableImageStreamDetection=true \
+                            org.apache.maven.plugins:maven-failsafe-plugin:verify \
+                            -P openshift-it"
+    }
+
   } else if (utils.isCD()) {
     /*
      * Try to load the script ".openshiftio/Jenkinsfile.setup.groovy".
@@ -28,7 +34,7 @@ mavenNode {
     } catch (Exception ex) {
       echo "Jenkinsfile.setup.groovy not found"
     }
-    
+
     echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
     container(name: 'maven') {
       stage('Build Release') {
