fixed test command indentation

--- a/maven/ReleaseAndStage/Jenkinsfile
+++ b/maven/ReleaseAndStage/Jenkinsfile
@@ -13,11 +13,12 @@ mavenNode {
   if (utils.isCI()) {
 
     mavenCI {
-        integrationTestCmd = "mvn org.apache.maven.plugins:maven-failsafe-plugin:integration-test \
-                            -Dnamespace.use.current=false -Dnamespace.use.existing=${utils.testNamespace()} \
-                            -Dit.test=*IT -DfailIfNoTests=false -DenableImageStreamDetection=true \
-                            org.apache.maven.plugins:maven-failsafe-plugin:verify \
-                            -P openshift-it"
+        integrationTestCmd =
+         "mvn org.apache.maven.plugins:maven-failsafe-plugin:integration-test \
+            org.apache.maven.plugins:maven-failsafe-plugin:verify \
+            -Dnamespace.use.current=false -Dnamespace.use.existing=asds \
+            -Dit.test=*IT -DfailIfNoTests=false -DenableImageStreamDetection=true \
+            -P openshift-it"
     }
 
   } else if (utils.isCD()) {
