fixed missing changes for maven integration test
Changes has been left to fix maven integration test command
from PR https://github.com/fabric8io/fabric8-jenkinsfile-library/pull/36

--- a/maven/ReleaseAndStage/Jenkinsfile
+++ b/maven/ReleaseAndStage/Jenkinsfile
@@ -16,7 +16,7 @@ mavenNode {
         integrationTestCmd =
          "mvn org.apache.maven.plugins:maven-failsafe-plugin:integration-test \
             org.apache.maven.plugins:maven-failsafe-plugin:verify \
-            -Dnamespace.use.current=false -Dnamespace.use.existing=asds \
+            -Dnamespace.use.current=false -Dnamespace.use.existing=${utils.testNamespace()} \
             -Dit.test=*IT -DfailIfNoTests=false -DenableImageStreamDetection=true \
             -P openshift-it"
     }
