--- a/maven/ReleaseStageApproveAndPromote/Jenkinsfile
+++ b/maven/ReleaseStageApproveAndPromote/Jenkinsfile
@@ -16,7 +16,7 @@ mavenNode {
         integrationTestCmd =
          "mvn org.apache.maven.plugins:maven-failsafe-plugin:integration-test \
             org.apache.maven.plugins:maven-failsafe-plugin:verify \
-            -Dnamespace.use.current=false -Dnamespace.use.existing=asds \
+            -Dnamespace.use.current=false -Dnamespace.use.existing=${utils.testNamespace()} \
             -Dit.test=*IT -DfailIfNoTests=false -DenableImageStreamDetection=true \
             -P openshift-it"
     }
