--- a/golang/ReleaseAndStage/Jenkinsfile
+++ b/golang/ReleaseAndStage/Jenkinsfile
@@ -1,29 +1,28 @@
-#!/usr/bin/groovy
-@Library('github.com/fabric8io/fabric8-pipeline-library@master')
-def utils = new io.fabric8.Utils()
-clientsNode{
-  def envStage = utils.environmentNamespace('stage')
-  def newVersion = ''
+@Library('github.com/fabric8io/osio-pipeline@master') _
 
-  checkout scm
+osio {
 
-  stage('Build Release')
-  echo 'NOTE: running pipelines for the first time will take longer as build and base docker images are pulled onto the node'
-  if (!fileExists ('Dockerfile')) {
-    writeFile file: 'Dockerfile', text: 'FROM golang:onbuild'
+  config runtime: 'go'
+
+  ci {
+
+    def resources = processTemplate(params: [
+          release_version: "1.0.${env.BUILD_NUMBER}"
+    ])
+
+    build resources: resources
+
   }
 
-  newVersion = performCanaryRelease {}
+  cd {
 
-  def rc = getDeploymentResources {
-    port = 8080
-    label = 'golang'
-    icon = 'https://cdn.rawgit.com/fabric8io/fabric8/dc05040/website/src/images/logos/gopher.png'
-    version = newVersion
-    imageName = clusterImageName
+    def resources = processTemplate(params: [
+          release_version: "1.0.${env.BUILD_NUMBER}"
+    ])
+
+    build resources: resources
+
+    deploy resources: resources, env: 'stage'
+
   }
-
-  stage('Rollout to Stage')
-  kubernetesApply(file: rc, environment: envStage)
-
 }
